# working_memory

./: .gitignore  config.toml  pyproject.toml  setup.py
code/revision_figures/: 1.5. Review_Decoder across delays trained on 3s or 10s delays.ipynb  1.6. Review_Search for reversals in log odds.ipynb  2.6. Review_Decoder RepL across delays.ipynb  2.6. Review_Decoder across delays.ipynb  2.7. Review_Correlate repb and lapse across sessions.ipynb  3.11. Review_Prepare the firing rate for rank analysis.ipynb  3.5. and 3.6. Review_Why some animals are not well fitted with HMM.ipynb  3.8. Review_Ramping_code.ipynb  BiologicalPsychiatry_PARSE_recover_data.ipynb  BiologicalPsychiatry_plot_results.ipynb  Figure for checking the decoder without separating states with the HMM.ipynb  Log_odds_plot_results.ipynb  Review_Decoder across delays.ipynb  Review_Prepare the firing rate for rank analysis.ipynb
code/video_analysis/: HMM_recovery.ipynb  wm_parse_custom.py
src/working_memory/: behavioral_functions.py  ephys_functions.py  model_functions.py  video_analysis_functions.py
