[project]
name = "working_memory"
version = "0.1.0"
description = "Your project description here"
authors = [{name = "Tiffany Ona", email = "tiffany.ona@example.com"}]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"