[project]
name = "working_memory"
version = "0.1.0"
description = "Your project description here"
authors = [
    {name = "Tiffany Ona", email = "tiffany.ona@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "opencv-python"
]

[project.optional-dependencies]
linters = [
    "ruff>=0.4.4",
    "black>=24.4.2",
    "isort>=5.13.2"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B"]
exclude = ["build", "dist", ".venv"]